# OmniBinder

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  RELEASE_FEATURES.md
.sisyphus/plans/: codebase-slimming-plan.md  linux-test-verify.md  per-client-shm-design.md  per-client-shm-v2.md
cmake/: OmniBinderConfig.cmake.in  OmniBinderIDL.cmake  Platform.cmake
cmake/toolchains/: arm-linux-gnueabihf.cmake
docs/: api-reference.md  architecture-internals.md  architecture.md  call-chain.md  cross-compiling-arm.md  examples.en.md  examples.md  idl-specification.en.md  idl-specification.md  omni-tool-usage.en.md  omni-tool-usage.md  performance-report.md  protocol.md  testing-guide.md  threading-model.md
examples/: CMakeLists.txt  common_types.bidl  sensor_service.bidl
examples/artifact_examples/: README.en.md  README.md
examples/artifact_examples/c/: CMakeLists.txt
examples/artifact_examples/cpp/: CMakeLists.txt
examples/artifact_sensor_hmi/: CMakeLists.txt  README.en.md  README.md
examples/artifact_sensor_hmi/hmi_c/: hmi_client.c
examples/artifact_sensor_hmi/hmi_cpp/: hmi_client.cpp
examples/artifact_sensor_hmi/idl/: sensor_hmi_common.bidl  sensor_hmi_service.bidl
examples/artifact_sensor_hmi/scripts/: build_downstream_example.sh  run_c_stack.sh  run_cpp_stack.sh
examples/artifact_sensor_hmi/sensor_c/: sensor_service.c
examples/artifact_sensor_hmi/sensor_cpp/: sensor_service.cpp
examples/example_c/: CMakeLists.txt  sensor_client.c  sensor_server.c
examples/example_cpp/: CMakeLists.txt  sensor_client.cpp  sensor_server.cpp
include/omnibinder/: buffer.h  buffer_view.h  error.h  log.h  message.h  omnibinder.h  omnibinder_c.h  proxy_base.h  runtime.h  service.h  transport.h  types.h
scripts/: build_dual_stage_install.sh
service_manager/: CMakeLists.txt  death_notifier.cpp  death_notifier.h  heartbeat_monitor.cpp  heartbeat_monitor.h  main.cpp  service_manager_app.cpp  service_manager_app.h  service_registry.cpp  service_registry.h  sm_diag.cpp  sm_parse_helpers.h  sm_registry.cpp  sm_topic.cpp  topic_manager.cpp  topic_manager.h
src/: CMakeLists.txt
src/core/: buffer.cpp  buffer_view.cpp  connection_manager.cpp  connection_manager.h  error.cpp  event_loop.cpp  event_loop.h  log.cpp  message.cpp  omni_allocator.cpp  omni_connection.cpp  omni_diag.cpp  omni_dispatch.cpp  omni_rpc.cpp  omni_runtime.cpp  omni_runtime.h  omni_runtime_helpers.cpp  omni_runtime_helpers.h  omni_service.cpp  omni_sm.cpp  omni_topic.cpp  omnibinder_c.cpp  owner_thread_executor.h  proxy_base.cpp  rpc_runtime.cpp  rpc_runtime.h  runtime_connection.cpp  runtime_diag.cpp  runtime_dispatch.cpp  runtime_helpers.cpp  runtime_helpers.h  runtime_rpc.cpp  runtime_service.cpp  runtime_sm.cpp  runtime_topic.cpp  service.cpp  service_host_runtime.cpp  service_host_runtime.h  sm_control_channel.cpp  sm_control_channel.h  (+2 more)
src/platform/: event_backend.h  event_backend_linux.cpp  event_backend_win.cpp  platform.cpp  platform.h  platform_linux.cpp  platform_win.cpp
src/transport/: shm_transport.cpp  shm_transport.h  tcp_transport.cpp  tcp_transport.h  transport.cpp  transport_factory.cpp  transport_factory.h  transport_selector.cpp  transport_selector.h
tests/: CMakeLists.txt  perf_service.bidl  test_buffer.cpp  test_c_api.cpp  test_common.h  test_control_plane_and_fallback.cpp  test_diagnostics_watch.cpp  test_error_compatibility.cpp  test_error_logging.cpp  test_event_loop.cpp  test_full_integration.cpp  test_generated_runtime_integration.cpp  test_heartbeat_death.cpp  test_heartbeat_reconnect.cpp  test_idl_compiler.cpp  test_idl_mismatch.cpp  test_integration.cpp  test_longrun_tools.py  test_message.cpp  test_omni_cli_info_formatter.cpp  test_omni_tool_type_codec.cpp  test_owner_thread_executor.cpp  test_performance.cpp  test_performance_server.cpp  test_runtime_stats.cpp  test_service_registry.cpp  test_shm_transport.cpp  test_sm_reconnect.cpp  test_soak_runner.cpp  test_stats.cpp  test_system_scenarios.cpp  test_thread_safety.cpp  test_threadsafe_client_and_reconnect.cpp  test_topic_manager.cpp  test_transient_disconnect_recovery.cpp  test_transport.cpp
tools/: CMakeLists.txt  longrun_summary.py  longrun_verdict.py
tools/omni_cli/: CMakeLists.txt  info_formatter.cpp  info_formatter.h  main.cpp  simple_json.cpp  simple_json.h  type_codec.cpp  type_codec.h  type_resolver.cpp  type_resolver.h
tools/omni_idlc/: CMakeLists.txt  ast.h  codegen.h  codegen_c.cpp  codegen_c.h  codegen_cpp.cpp  codegen_cpp.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic_validator.cpp  semantic_validator.h
